--- a/index.ipynb
+++ b/index.ipynb
@@ -472,9 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 0.05,\n",
+       " 'nobs': 50,\n",
+       " 'effect_size': 0.19999999999999996,\n",
+       " 'power': 0.16617}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import scipy.stats as stats\n",
     "def run_ttest_sim(p1, p2, std, nobs, alpha=0.05, n_sim=10**5):\n",
@@ -516,18 +530,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1676754863454749"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "power_analysis.solve_power(nobs1=50, effect_size=0.19999999999999996, alpha=0.05)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.049779515826212206"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "power_analysis.solve_power(nobs1=50, effect_size=0.19999999999999996, power=0.16719)"
    ]
